--- a/ExamPaper.vcxproj.filters
+++ b/ExamPaper.vcxproj.filters
@@ -64,5 +64,8 @@
     <Text Include="taxis.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="output.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
