--- a/ExamPaper.vcxproj
+++ b/ExamPaper.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="buses.txt" />
+    <Text Include="output.txt" />
     <Text Include="taxis.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
